--- a/gocd.yaml
+++ b/gocd.yaml
@@ -39,7 +39,7 @@ pipelines:
             type: manual
             allow_only_on_success: false
           jobs:
-            plan:
+            check:
               timeout: 0
               #elastic_profile_id: k8s-agent
               tasks:
