--- a/gocd.yaml
+++ b/gocd.yaml
@@ -13,6 +13,24 @@ pipelines:
         auto_update: true
         branch: master
     stages:
+      # - clean_workspace:
+      #     fetch_materials: true
+      #     keep_artifacts: false
+      #     clean_workspace: true
+      #     approval:
+      #       type: manual
+      #       allow_only_on_success: false
+      #     jobs:
+      #       check:
+      #         timeout: 0
+      #         elastic_profile_id: k8s-agent
+      #         tasks:
+      #           - exec:
+      #               arguments:
+      #                 - "-c"
+      #                 - "rm -rf .terraform/"
+      #               command: sh
+      #               run_if: passed
       - terraform-destroy:
           fetch_materials: true
           keep_artifacts: false
@@ -28,7 +46,7 @@ pipelines:
                 - exec:
                     arguments:
                       - "-c"
-                      - "terraform init && terraform destroy -auto-approve"
+                      - "terraform init -reconfigure && terraform destroy -auto-approve"
                     command: sh
                     run_if: passed
       # - terraform-destroy:
