--- a/gocd.yaml
+++ b/gocd.yaml
@@ -28,7 +28,7 @@ pipelines:
                 - exec:
                     arguments:
                       - "-c"
-                      - "apK add jq -y \ 
+                      - "apk add jq -y \ 
                         && bash kubectl-plugin.sh \
                         && terraform init \
                         && terraform destroy -auto-approve"
