--- a/gocd.yaml
+++ b/gocd.yaml
@@ -9,6 +9,7 @@ pipelines:
     parameters: 
       STORE_CODE: STORE_CODE
     materials:
+      STORE_CODE: STORE_CODE
       git:
         git: https://github.com/Dmytro-Ostapenko-97/gocd-test
         shallow_clone: false
@@ -49,7 +50,7 @@ pipelines:
                 - exec:
                     arguments:
                       - "-c"
-                      - "echo ${STORE_CODE}"
+                      - "echo ${STORE_CODE} $$ echo ${APP_NAME}"
                     command: sh
                     run_if: passed  
 
