--- a/gocd.yaml
+++ b/gocd.yaml
@@ -48,6 +48,18 @@ pipelines:
                       - "if [ ${IsValid,,} == "y"  ] || [ ${IsValid,,} == "yes" ] || [ ${IsValid,,} = "true" ]; then exit 0; else exit 1; fi"
                     command: sh
                     run_if: passed  
+      - test-parameters:
+          fetch_materials: true
+          keep_artifacts: false
+          clean_workspace: true
+          approval:
+            type: manual
+            allow_only_on_success: false
+          jobs:
+            echo:
+              timeout: 0
+              elastic_profile_id: k8s-agent
+              tasks:
                 - exec:
                     arguments:
                       - "-c"
