--- a/gocd.yaml
+++ b/gocd.yaml
@@ -11,26 +11,7 @@ pipelines:
         auto_update: true
         branch: master
     stages:
-      # - terraform-destroy:
-      #     fetch_materials: true
-      #     keep_artifacts: false
-      #     clean_workspace: true
-      #     approval:
-      #       type: manual
-      #       allow_only_on_success: false
-      #     jobs:
-      #       check:
-      #         timeout: 0
-      #         elastic_profile_id: k8s-agent
-      #         tasks:
-      #           - exec:
-      #               arguments:
-      #                 - "-c"
-      #                 - "terraform init \
-      #                 && terraform destroy -auto-approve"
-      #               command: sh
-      #               run_if: passed
-      - test-parameters:
+      - terraform-destroy:
           fetch_materials: true
           keep_artifacts: false
           clean_workspace: true
@@ -38,33 +19,51 @@ pipelines:
             type: manual
             allow_only_on_success: false
           jobs:
-            echo:
+            destroy:
               timeout: 0
               elastic_profile_id: k8s-agent
               tasks:
                 - exec:
                     arguments:
                       - "-c"
-                      - "echo ${STORE_CODE}"
+                      - "cd deploy/stores/${STORE_CODE} \
+                      && terraform init -backend-config=key=eks_infrastructure/stores/${STORE_CODE}/terraform.tfstate \
+                      && terraform destroy -auto-approve"
                     command: sh
-                    run_if: passed  
-
-
-      # - terraform-destroy:
-      #     fetch_materials: true
-      #     keep_artifacts: false
-      #     clean_workspace: true
-      #     approval:
-      #       type: manual
-      #       allow_only_on_success: false
-      #     jobs:
-      #       check:
-      #         timeout: 0
-      #         elastic_profile_id: k8s-agent
-      #         tasks:
-      #           - exec:
-      #               arguments:
-      #                 - -c
-      #                 - "terraform plan"
-      #               command: sh
-      #               run_if: passed
+                    run_if: passed
+      - jenkins-destroy:
+          fetch_materials: true
+          keep_artifacts: false
+          clean_workspace: true
+          approval:
+            type: manual
+            allow_only_on_success: false
+          jobs:
+            destroy:
+              timeout: 0
+              elastic_profile_id: k8s-agent
+              tasks:
+                - exec:
+                    arguments:
+                      - "-c"
+                      - ""
+                    command: sh
+                    run_if: passed
+      - ecr-destroy:
+          fetch_materials: true
+          keep_artifacts: false
+          clean_workspace: true
+          approval:
+            type: manual
+            allow_only_on_success: false
+          jobs:
+            destroy:
+              timeout: 0
+              elastic_profile_id: k8s-agent
+              tasks:
+                - exec:
+                    arguments:
+                      - "-c"
+                      - "aws ecr delete-repository --repository-name ${STORE_CODE} --force"
+                    command: sh
+                    run_if: passed
