--- a/gocd.yaml
+++ b/gocd.yaml
@@ -35,6 +35,13 @@ pipelines:
           fetch_materials: true
           keep_artifacts: false
           clean_workspace: true
+          environment_variables:
+            USERNAME: dmytro_ostapenko
+            USER_API_TOKEN: 114a820a8760fda00155b7abb0d01ae157
+            SERVER_URL: jenkins.gregacademy.icu
+            DESTROY_PIPELINE: test
+            JOB_TOKEN: XPBf3Md7MZwdts
+            BUILD_TYPE: buildWithParameters     #cane be build or buildWithParameters  
           approval:
             type: manual
             allow_only_on_success: false
@@ -46,7 +53,7 @@ pipelines:
                 - exec:
                     arguments:
                       - "-c"
-                      - "curl -d STORE_CODE=${STORE_CODE} -i -X POST https://dmytro_ostapenko:114a820a8760fda00155b7abb0d01ae157@jenkins.gregacademy.icu/job/test/buildWithParameters?token=XPBf3Md7MZwdts"
+                      - "curl -d STORE_CODE=${STORE_CODE} -i -X POST https://{USERNAME}:${USER_API_TOKEN}@{SERVER_URL}/job/{DESTROY_PIPELINE}/{BUILD_TYPE}?token={JOB_TOKEN}"
                     command: sh
                     run_if: passed
       - ecr-destroy:
