--- a/gocd.yaml
+++ b/gocd.yaml
@@ -53,7 +53,7 @@ pipelines:
                 - exec:
                     arguments:
                       - "-c"
-                      - "curl -d STORE_CODE=${STORE_CODE} -i -X POST https://{USERNAME}:${USER_API_TOKEN}@${SERVER_URL}/job/${DESTROY_PIPELINE}/${BUILD_TYPE}?token=${JOB_TOKEN}"
+                      - "curl -d STORE_CODE=${STORE_CODE} -i -X POST https://${USERNAME}:${USER_API_TOKEN}@${SERVER_URL}/job/${DESTROY_PIPELINE}/${BUILD_TYPE}?token=${JOB_TOKEN}"
                     command: sh
                     run_if: passed
       - ecr-destroy:
