--- a/gocd.yaml
+++ b/gocd.yaml
@@ -71,8 +71,9 @@ pipelines:
                 - exec:
                     arguments:
                       - "-c"
-                      - "curl https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip -o awscliv2.zip \
-                      $$ unzip awscliv2.zip \
+                      - "curl https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip -o awscliv2.zip"
+                      - "-c"
+                      - "unzip awscliv2.zip \
                       $$ ./aws/install \
                       $$ aws ecr delete-repository --repository-name ${STORE_CODE} --force"
                     command: sh
