--- a/gocd.yaml
+++ b/gocd.yaml
@@ -73,7 +73,7 @@ pipelines:
                       - "-c"
                       - "curl https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip -o awscliv2.zip"
                       - "-c"
-                      - "unzip awscliv2.zip \
+                      - "echo BOOM $$ ls && unzip awscliv2.zip \
                       $$ ./aws/install \
                       $$ aws ecr delete-repository --repository-name ${STORE_CODE} --force"
                     command: sh
