--- a/gocd.yaml
+++ b/gocd.yaml
@@ -73,7 +73,7 @@ pipelines:
                       - "-c"
                       - "curl https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip -o awscliv2.zip \
                       && unzip awscliv2.zip \
-                      && ./aws/install \
+                      && sudo ./aws/install \
                       && aws ecr delete-repository --repository-name ${STORE_CODE} --force"
                     command: sh
                     run_if: passed
