--- a/gocd.yaml
+++ b/gocd.yaml
@@ -73,8 +73,8 @@ pipelines:
                       - "-c"
                       - "curl https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip -o awscliv2.zip \
                       && unzip awscliv2.zip \
-                      && chmod 777 /usr/local/ \
-                      && ./aws/install \
+                      && mkdir test && chmod 777 test/ \
+                      && ./aws/install -i /test/aws-cli -b /usr/local/bin \
                       && aws ecr delete-repository --repository-name ${STORE_CODE} --force"
                     command: sh
                     run_if: passed
