--- a/gocd.yaml
+++ b/gocd.yaml
@@ -73,7 +73,7 @@ pipelines:
                       - "-c"
                       - "curl https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip -o awscliv2.zip \
                       && unzip awscliv2.zip \
-                      && mkdir test && chmod 777 test/ \
+                      && pwd && mkdir test && chmod 777 test/ \
                       && ./aws/install -i /test/aws-cli -b /usr/local/bin \
                       && aws ecr delete-repository --repository-name ${STORE_CODE} --force"
                     command: sh
