--- a/gocd.yaml
+++ b/gocd.yaml
@@ -60,6 +60,8 @@ pipelines:
           fetch_materials: true
           keep_artifacts: false
           clean_workspace: true
+          environment_variables:
+            USERNAME: ${blablabla}
           approval:
             type: manual
             allow_only_on_success: false
@@ -71,6 +73,6 @@ pipelines:
                 - exec:
                     arguments:
                       - "-c"
-                      - "aws ecr delete-repository --repository-name ${STORE_CODE} --force"                     
+                      - "echo ${USERNAME} && echo ${blablabla}"                     
                     command: sh
                     run_if: passed
